# InsightSwarm

./: .env.example  .gitignore  ENHANCEMENT_PLAN.md  PROJECT_STATUS.md  README-zh.md  README.md  ask.ps1  config.models.example.json  config.models.json  demo_enhanced.py  enhanced_sub_researcher.py  main.py  pyproject.toml  test_enhanced_features.py
browser_extension/: manifest.json  popup.html  popup.js
design/: insightswarm-dashboard.html
docs/: architecture.md  browser-safety.md  coding-guidelines.md  engineering-standards.md  running.md  京东的报告.md  图片提问示例.md  早期OPENAI报告.md  燃油费报告.md
evals/: rubric.md
insightswarm/: authorization_flow.py  browser_authorization.py  browser_backend.py  browser_code.py  browser_code_session.py  browser_handoff.py  browser_interaction.py  browser_sandbox.py  cli.py  config.py  delivery_gate.py  event_bus.py  extraction_batches.py  message_protocol.py  multimodal_inputs.py  objective_runtime.py  swarm_store.py  util.py
tests/: test_agent_loop_contract.py  test_agent_trace.py  test_architecture_invariants.py  test_big_step1_autonomous_loop.py  test_browser_code_session.py  test_browser_smoke.py  test_cdp_interaction_smoke.py  test_cdp_smoke.py  test_core.py  test_critic_evidence_map.py  test_engineering_guardrails.py  test_eval_cases.py  test_eval_cli.py  test_eval_judge.py  test_eval_quote_verify.py  test_eval_resume.py  test_eval_schema_migration.py  test_eval_stats.py  test_eval_telemetry.py  test_event_bus.py  test_evidence_dedup.py  test_execution_cell.py  test_extraction_batches.py  test_extractor_failure_review.py  test_extractor_nfkc.py  test_fetch_jina_fallback.py  test_lead_planner.py  test_main_entry.py  test_model_registry.py  test_objective_runtime_fixture.py  test_openai_compatible.py  (+24 more)
(+77 files in other folders)
