[project]
name = "insightswarm"
version = "0.1.0"
description = "AI-driven competitive analysis agent collaboration system"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
browser = ["websocket-client>=1.8"]

[project.scripts]
insightswarm = "insightswarm.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["insightswarm*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--ignore=tests/acceptance"]
pythonpath = ["."]
markers = [
  "acceptance: opt-in real/model-backed acceptance tests",
  "browser_smoke: opt-in local Playwright/browser smoke tests",
  "cdp_smoke: opt-in real CDP read-only browser observation smoke tests",
  "cdp_interaction_smoke: opt-in real CDP browser interaction smoke tests",
]
